hphp/hack/test/pocket_universes/typing/pu_atom_cast.bad.php.exp
File "pu_atom_cast.bad.php", line 11, characters 15-23:
Invalid argument (Typing[4110])
File "pu_atom_cast.bad.php", line 11, characters 10-12:
Expected `int`
File "pu_atom_cast.bad.php", line 6, characters 20-20:
  via this generic `T`
File "pu_atom_cast.bad.php", line 11, characters 15-23:
But got `:@message`
File "pu_atom_cast.bad.php", line 12, characters 17-25:
Invalid argument (Typing[4110])
File "pu_atom_cast.bad.php", line 12, characters 10-14:
Expected `float`
File "pu_atom_cast.bad.php", line 6, characters 20-20:
  via this generic `T`
File "pu_atom_cast.bad.php", line 12, characters 17-25:
But got `:@message`
File "pu_atom_cast.bad.php", line 13, characters 13-21:
Invalid argument (Typing[4110])
File "pu_atom_cast.bad.php", line 13, characters 10-10:
Expected `T`
File "pu_atom_cast.bad.php", line 6, characters 20-20:
  via this generic `T`
File "pu_atom_cast.bad.php", line 13, characters 13-21:
But got `:@message`
File "pu_atom_cast.bad.php", line 14, characters 13-21:
Invalid argument (Typing[4110])
File "pu_atom_cast.bad.php", line 14, characters 10-10:
Expected `C`
File "pu_atom_cast.bad.php", line 6, characters 20-20:
  via this generic `T`
File "pu_atom_cast.bad.php", line 14, characters 13-21:
But got `:@message`
